--- a/CLASSLION/Likelion/LikelionHanyang/introduce/templates/home.html
+++ b/CLASSLION/Likelion/LikelionHanyang/introduce/templates/home.html
@@ -24,10 +24,16 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/css/agency.min.css" rel="stylesheet">
-
+    <style type="text/css">
+        @media screen and (min-width: 768px) {
+            .hyu_active {
+                max-width: 25%;
+            }
+        }
+    </style>
 </head>
 
-<body id="page-top">
+<body id="page-top" style="width:100%">
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
@@ -92,7 +98,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4" style="max-width: 25%;">
+                <div class="col-md-4 hyu_active">
                     <span class="fa-stack fa-4x">
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
@@ -100,7 +106,7 @@
                     <h4 class="service-heading">Web Programming 교육</h4>
                     <p class="text-muted">python(파이썬) 언어를 기반으로 한 웹 개발 프레임워크인 Django를 활용한 웹 서비스 개발 교육을 진행합니다.</p>
                 </div>
-                <div class="col-md-4" style="max-width: 25%;">
+                <div class="col-md-4 hyu_active">
                     <span class="fa-stack fa-4x">
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="far fa-lightbulb fa-stack-1x fa-inverse"></i>
@@ -108,7 +114,7 @@
                     <h4 class="service-heading">Team Building 및 Idea Sketch</h4>
                     <p class="text-muted">뜻이 맞는 팀원을 모으고 아이디어를 다같이 공유하고 발전시켜 프로토타이핑을 하는 활동을 진행합니다.</p>
                 </div>
-                <div class="col-md-4" style="max-width: 25%;">
+                <div class="col-md-4 hyu_active">
                     <span class="fa-stack fa-4x">
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="fas fa-running fa-stack-1x fa-inverse"></i>
@@ -116,7 +122,7 @@
                     <h4 class="service-heading">Hackathon</h4>
                     <p class="text-muted">전국의 멋쟁이 사자들이 모여 서비스를 개발하는 1박2일 행사를 진행합니다.</p>
                 </div>
-                <div class="col-md-4" style="max-width: 25%;">
+                <div class="col-md-4 hyu_active">
                     <span class="fa-stack fa-4x">
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="fas fa-wifi fa-stack-1x fa-inverse"></i>
