--- a/CLASSLION/Likelion/LikelionHanyang/introduce/templates/home.html
+++ b/CLASSLION/Likelion/LikelionHanyang/introduce/templates/home.html
@@ -365,10 +365,10 @@
                         <div class="col-lg-8 mx-auto">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2 class="text-uppercase">Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <h2 class="text-uppercase">Frontend</h2>
+                                <p class="item-intro text-muted">페이스북에서 제공해주는 프론트엔드 라이브러리</p>
                                 <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/01-full.jpg" alt="">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
+                                <!--<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt
                                     repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae,
                                     nostrum, reiciendis facere nemo!</p>
@@ -376,7 +376,7 @@
                                     <li>Date: January 2017</li>
                                     <li>Client: Threads</li>
                                     <li>Category: Illustration</li>
-                                </ul>
+                                </ul>-->
                                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                                     <i class="fas fa-times"></i>
                                     Close Project</button>
@@ -402,10 +402,10 @@
                         <div class="col-lg-8 mx-auto">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2 class="text-uppercase">Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <h2 class="text-uppercase">Backend</h2>
+                                <p class="item-intro text-muted">파이썬으로 작성된 오픈 소스 웹 애플리케이션 프레임워크</p>
                                 <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/02-full.jpg" alt="">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
+                                <!--<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt
                                     repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae,
                                     nostrum, reiciendis facere nemo!</p>
@@ -413,7 +413,7 @@
                                     <li>Date: January 2017</li>
                                     <li>Client: Explore</li>
                                     <li>Category: Graphic Design</li>
-                                </ul>
+                                </ul>-->
                                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                                     <i class="fas fa-times"></i>
                                     Close Project</button>
@@ -439,10 +439,10 @@
                         <div class="col-lg-8 mx-auto">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2 class="text-uppercase">Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <h2 class="text-uppercase">Community</h2>
+                                <p class="item-intro text-muted"> 컴퓨터 파일의 변경사항을 추적하고 여러 명의 사용자들 간에 해당 파일들의 작업을 조율하기 위한 분산 버전 관리 시스템</p>
                                 <img class="img-fluid d-block mx-auto" src="/static/img/portfolio/03-full.jpg" alt="">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
+                                <!--<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt
                                     repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae,
                                     nostrum, reiciendis facere nemo!</p>
@@ -450,7 +450,7 @@
                                     <li>Date: January 2017</li>
                                     <li>Client: Finish</li>
                                     <li>Category: Identity</li>
-                                </ul>
+                                </ul>-->
                                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                                     <i class="fas fa-times"></i>
                                     Close Project</button>
