머지 오류 해결

--- a/CLASSLION/Likelion/LikelionHanyang/introduce/templates/home.html
+++ b/CLASSLION/Likelion/LikelionHanyang/introduce/templates/home.html
@@ -270,6 +270,162 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <h4>최재혁</h4>
+                        <p class="text-muted">
+                            8기 운영진
+                            <br>한양대학교 융합전자공학부 재학
+                            <br>ㅇㅇㅇ 대표
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <h4>Kay Garland</h4>
+                        <p class="text-muted">
+                            8기 운영진
+                            <br>한양대학교 컴퓨터소프트웨어학부 재학
+                            <br>ㅇㅇㅇ 대표
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <h4>Kay Garland</h4>
+                        <p class="text-muted">
+                            8기 운영진
+                            <br>한양대학교 컴퓨터소프트웨어학부 재학
+                            <br>ㅇㅇㅇ 대표
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <h4>Kay Garland</h4>
+                        <p class="text-muted">
+                            8기 운영진
+                            <br>한양대학교 컴퓨터소프트웨어학부 재학
+                            <br>ㅇㅇㅇ 대표
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <h4>Kay Garland</h4>
+                        <p class="text-muted">
+                            8기 운영진
+                            <br>한양대학교 컴퓨터소프트웨어학부 재학
+                            <br>ㅇㅇㅇ 대표
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <h4>Kay Garland</h4>
+                        <p class="text-muted">
+                            8기 운영진
+                            <br>한양대학교 컴퓨터소프트웨어학부 재학
+                            <br>ㅇㅇㅇ 대표
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <h4>Kay Garland</h4>
+                        <p class="text-muted">
+                            8기 운영진
+                            <br>한양대학교 컴퓨터소프트웨어학부 재학
+                            <br>ㅇㅇㅇ 대표
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <h4>Kay Garland</h4>
+                        <p class="text-muted">
+                            8기 운영진
+                            <br>한양대학교 컴퓨터소프트웨어학부 재학
+                            <br>ㅇㅇㅇ 대표
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <h4>Kay Garland</h4>
+                        <p class="text-muted">
+                            8기 운영진
+                            <br>한양대학교 컴퓨터소프트웨어학부 재학
+                            <br>ㅇㅇㅇ 대표
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <h4>Kay Garland</h4>
+                        <p class="text-muted">
+                            8기 운영진
+                            <br>한양대학교 컴퓨터소프트웨어학부 재학
+                            <br>ㅇㅇㅇ 대표
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <h4>Kay Garland</h4>
+                        <p class="text-muted">
+                            8기 운영진
+                            <br>한양대학교 컴퓨터소프트웨어학부 재학
+                            <br>ㅇㅇㅇ 대표
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <h4>Kay Garland</h4>
+                        <p class="text-muted">
+                            8기 운영진
+                            <br>한양대학교 컴퓨터소프트웨어학부 재학
+                            <br>ㅇㅇㅇ 대표
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
                         <h4>Kay Garland</h4>
                         <p class="text-muted">
                             8기 운영진
