--- a/CLASSLION/Likelion/LikelionHanyang/introduce/templates/home.html
+++ b/CLASSLION/Likelion/LikelionHanyang/introduce/templates/home.html
@@ -325,11 +325,13 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/김효일.jpg" alt="">
                         <h4>김효일</h4>
                         <p class="text-muted">
                             8기 운영진
                             <br>한양대학교 컴퓨터소프트웨어학부 재학
+                            <br>몰입캠프 참가
+                            <br>생활코딩 머신러닝1 베타테스터
                         </p>
                     </div>
                 </div>
@@ -350,6 +352,7 @@
                         <p class="text-muted">
                             8기 운영진
                             <br>한양대학교 정보시스템학과 재학
+                            <br>SDI 스킨스쿠버 강사
                         </p>
                     </div>
                 </div>
@@ -366,17 +369,18 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/양문영.jpg" alt="">
                         <h4>양문영</h4>
                         <p class="text-muted">
                             8기 운영진
                             <br>한양대학교 컴퓨터소프트웨어학부 재학
+                            <br>해외 코딩 교육 봉사
                         </p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="/static/img/team/1.jpg" alt="">
+                        <img class="mx-auto rounded-circle" src="/static/img/team/윤승권.jpg" alt="">
                         <h4>윤승권</h4>
                         <p class="text-muted">
                             8기 운영진
