--- a/CLASSLION/Likelion/LikelionHanyang/introduce/templates/home.html
+++ b/CLASSLION/Likelion/LikelionHanyang/introduce/templates/home.html
@@ -30,6 +30,18 @@
                 max-width: 25%;
             }
         }
+        @font-face { font-family: 'Arita-dotum-Medium'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Arita-dotum-Medium.woff') format('woff'); font-weight: normal; font-style: normal; }
+        @font-face { font-family: 'SDKukdetopokki-Lt'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/SDKukdetopokki-aLt00.woff') format('woff'); font-weight: normal; font-style: normal; }
+
+        .nav-link{font-family: 'Arita-dotum-Medium' !important;}
+        .section-subheading{font-family: 'Arita-dotum-Medium' !important;}
+        h2, h4{font-family: 'Arita-dotum-Medium';}
+        
+        .text-muted{font-family:'SDKukdetopokki-Lt';
+                    font-size: 13px;
+                    margin-top: 1rem;}
+
+        .team-member p {margin-top: 1rem;}
     </style>
 </head>
 
@@ -67,8 +79,7 @@
                             더보기
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="border-radius: 5px">
-                            <a class="dropdown-item" href="#" style="color: #666; padding: 10px;">게시판</a>
-                            <a class="dropdown-item" href="#" style="color: #666; padding: 10px;">지원하기</a>
+                            <a class="dropdown-item" href="#" style="color: #666; padding: 10px; font-family: Arita-dotum-Medium" data-toggle="modal" data-target="#exampleModal">지원하기</a>
                         </div>
                     </li>
                 </ul>
@@ -83,7 +94,7 @@
                 <div class="intro-lead-in">Hack your Life!</div>
                 <div class="intro-heading text-uppercase">LIKELION X Hanyang</div>
                 <a class="btn btn-outline-warning btn-xl text-uppercase js-scroll-trigger" href="#services"
-                    style="border-radius: 20px; padding: 20px 40px;">Tell Me More</a>
+                    style="border-radius: 20px; padding: 20px 40px; background: #fcc735; color: black;">Tell Me More</a>
             </div>
         </div>
     </header>
@@ -103,7 +114,7 @@
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Programming 교육</h4>
+                    <h4 class="service-heading">Web Programming EDU</h4>
                     <p class="text-muted">python(파이썬) 언어를 기반으로 한 웹 개발 프레임워크인 Django를 활용한 웹 서비스 개발 교육을 진행합니다.</p>
                 </div>
                 <div class="col-md-4 hyu_active">
@@ -111,7 +122,7 @@
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="far fa-lightbulb fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Team Building 및 Idea Sketch</h4>
+                    <h4 class="service-heading">Team Idea Building</h4>
                     <p class="text-muted">뜻이 맞는 팀원을 모으고 아이디어를 다같이 공유하고 발전시켜 프로토타이핑을 하는 활동을 진행합니다.</p>
                 </div>
                 <div class="col-md-4 hyu_active">
@@ -286,7 +297,6 @@
                             8기 운영진
                             <br>한양대학교 영어영문학과 & 컴퓨터소프트웨어학부 재학
                             <br>한양대학교 드론동아리 하이드론
-                            <br>(구)HSBC-JA Korea 경제교육봉사단
                         </p>
                     </div>
                 </div>
@@ -363,7 +373,6 @@
                         <p class="text-muted">
                             8기 운영진
                             <br>한양대학교 컴퓨터소프트웨어학부 재학
-                            <br>(구)SPCKS 개발자
                         </p>
                     </div>
                 </div>
@@ -447,7 +456,7 @@
                             <ul class="list-inline social-buttons"
                                 style="position:absolute; top:50%; left:50%; transform: translate(-50%, -50%);">
                                 <li class="list-inline-item">
-                                    <a href="https://www.facebook.com/likelion.hyu" style="text-align: center;">
+                                    <a href="https://www.facebook.com/likelion.hyu" target="_blank" style="text-align: center;">
                                         <i class="fab fa-facebook-f"></i>
                                     </a>
                                 </li>
@@ -465,7 +474,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; 고민경 김상효 심현아 이도현</span>
+                    <span class="copyright" style="font-family: Arita-dotum-Medium;">Copyright &copy; 고민경 김상효 심현아 이도현</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
@@ -508,7 +517,7 @@
                                 </ul>-->
                                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                                     <i class="fas fa-times"></i>
-                                    Close Project</button>
+                                    Close</button>
                             </div>
                         </div>
                     </div>
@@ -545,7 +554,7 @@
                                 </ul>-->
                                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                                     <i class="fas fa-times"></i>
-                                    Close Project</button>
+                                    Close</button>
                             </div>
                         </div>
                     </div>
@@ -583,7 +592,7 @@
                                 </ul>-->
                                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                                     <i class="fas fa-times"></i>
-                                    Close Project</button>
+                                    Close</button>
                             </div>
                         </div>
                     </div>
@@ -591,6 +600,26 @@
             </div>
         </div>
     </div>
+
+    <!--modal_apply-->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel" style="font-family: SDKukdetopokki-Lt">한양대학교 멋쟁이사자처럼</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <h4 style="font-size: 0.9em;">지금은 지원 기간이 아닙니다.</h4>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn" data-dismiss="modal" style="border: 1px solid #fcc735; background: #fcc735; color: white;">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="/static/vendor/jquery/jquery.min.js"></script>
