--- a/CLASSLION/Likelion/LikelionHanyang/introduce/templates/home.html
+++ b/CLASSLION/Likelion/LikelionHanyang/introduce/templates/home.html
@@ -307,7 +307,7 @@
                         <p class="text-muted">
                             8기 운영진
                             <br>한양대학교 컴퓨터소프트웨어학부 재학
-                            <br>(구)라이언로켓 AI 개발자
+                            <br>(전)라이언로켓 AI 개발자
                         </p>
                     </div>
                 </div>
